fix chat area alignment

--- a/chat-app/src/containers/chat-area/ChatArea.css
+++ b/chat-app/src/containers/chat-area/ChatArea.css
@@ -1,6 +1,7 @@
 .chat-area {
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   height: 92dvh;
   width: 70%;
   border-left: 0.5px solid var(--lightgrey);
