--- a/chat-app/src/containers/chat-messages/ChatMessages.css
+++ b/chat-app/src/containers/chat-messages/ChatMessages.css
@@ -2,5 +2,5 @@
   background-color: var(--white);
   max-width: 100%;
   overflow-y: scroll;
-  padding-bottom: 96px;
+  padding-bottom: 0;
 }
